dsp-cli/tests/snapshots/cli__help_vre_project.snap
---
source: tests/cli.rs
expression: text
---
Manage DSP projects.

A project is the top-level container on DSP. Every data-model and resource belongs to exactly one project. See also: dsp docs concepts

Usage: dsp vre project [OPTIONS] <COMMAND>

Commands:
  list      List all projects on the DSP server
  describe  Describe a single DSP project
  dump      Trigger and download a project dump (a server-produced bagit-zip archive)
  help      Print this message or the help of the given subcommand(s)

Options:
  -v, --verbose...
          Increase log verbosity (-v=info, -vv=debug, -vvv=trace). RUST_LOG overrides

  -h, --help
          Print help (see a summary with '-h')
