dsp-cli/tests/snapshots/cli__help_vre_resource.snap
---
source: dsp-cli/tests/cli.rs
expression: text
---
List resource instances within a project.

Fetches the actual data instances (scholarly objects) stored in the DSP server for a given resource-type, with optional pagination. See also: dsp docs concepts

Usage: dsp vre resource [OPTIONS] <COMMAND>

Commands:
  list      List resource instances of a given type within a project
  describe  Fetch the envelope metadata of a single resource by its internal IRI
  help      Print this message or the help of the given subcommand(s)

Options:
  -v, --verbose...
          Increase log verbosity (-v=info, -vv=debug, -vvv=trace). RUST_LOG overrides

      --allow-insecure-server
          Allow a non-local --server to use insecure http:// (see `dsp docs connecting`)
          
          [env: DSP_ALLOW_INSECURE_SERVER=]

  -h, --help
          Print help (see a summary with '-h')
