dsp-cli/tests/snapshots/cli__help_vre_resource_type.snap
---
source: dsp-cli/tests/cli.rs
expression: text
---
Manage resource-types within a data-model.

A resource-type (called "class" in DSP-API) defines the structure of one kind of scholarly object: its fields, value-types, and cardinalities.

Usage: dsp vre resource-type [OPTIONS] <COMMAND>

Commands:
  list      List all resource-types in a data-model
  describe  Describe a single resource-type, including its fields and value-types
  help      Print this message or the help of the given subcommand(s)

Options:
  -v, --verbose...
          Increase log verbosity (-v=info, -vv=debug, -vvv=trace). RUST_LOG overrides

      --allow-insecure-server
          Allow a non-local --server to use insecure http:// (see `dsp docs connecting`)
          
          [env: DSP_ALLOW_INSECURE_SERVER=]

  -h, --help
          Print help (see a summary with '-h')
