dsp-cli/tests/snapshots/cli__help_vre_resource_type_describe.snap
---
source: dsp-cli/tests/cli.rs
expression: text
---
Describe a single resource-type, including its fields and value-types.

See also: dsp docs concepts

Usage: dsp vre resource-type describe [OPTIONS]

Options:
  -s, --server <SERVER>
          DSP server URL or shortcut (e.g. `https://api.example.org` or `prod`). Can also be set via the `DSP_SERVER` environment variable or a `.env` file
          
          [env: DSP_SERVER=]

  -v, --verbose...
          Increase log verbosity (-v=info, -vv=debug, -vvv=trace). RUST_LOG overrides

      --allow-insecure-server
          Allow a non-local --server to use insecure http:// (see `dsp docs connecting`)
          
          [env: DSP_ALLOW_INSECURE_SERVER=]

  -p, --project <PROJECT>
          Shortcode, shortname, or IRI of the project

      --data-model <DATA_MODEL>
          Name or IRI of the data-model containing the resource-type

      --resource-type <RESOURCE_TYPE>
          Name or IRI of the resource-type to describe

      --include-builtins
          Also show the built-in (platform) fields every resource inherits (arkUrl, permissions, timestamps, …). Off by default

      --count
          Also fetch and show instance counts per resource-type (one extra HTTP call). Off by default. Counts are non-deleted but NOT permission-filtered (unlike `resource list`) — a disclosure note is emitted when this flag is used

      --format <FORMAT>
          Output format (default: prose)

          Possible values:
          - prose: Rich human-readable prose output with contextual hints (default)
          - json:  Newline-delimited JSON (one object per line)
          - lines: One identifier per line, for shell pipeline consumption
          - csv:   Comma-separated values with a header row
          - tsv:   Tab-separated values with a header row
          
          [default: prose]

  -j, --json
          Shortcut for --format=json

  -l, --lines
          Shortcut for --format=lines

      --columns <COLS>
          Output columns for tabular formats (csv, tsv, lines): comma-separated list that selects and reorders columns. Valid names are listed in the Columns line below. Duplicates are rejected

      --no-header
          Omit the csv/tsv header row, e.g. appending rows to an existing file

      --header-only
          Emit only the csv/tsv header row, no data rows. Note: the command still contacts the server

  -h, --help
          Print help (see a summary with '-h')

Columns (--columns): name, iri, value_type, link_target, cardinality, label, is_builtin, data_model
